--- a/public/index.html
+++ b/public/index.html
@@ -17,32 +17,7 @@
       rel="icon"
       href="%PUBLIC_URL%/icons8-z-plumpy-32.png"
     />
-    <link
-      rel="apple-touch-icon"
-      type="image/png"
-      sizes="57x57"
-      href="%PUBLIC_URL%/icons8-z-plumpy-57.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      type="image/png"
-      sizes="60x60"
-      href="%PUBLIC_URL%/icons8-z-plumpy-60.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      type="image/png"
-      sizes="72x72"
-      href="%PUBLIC_URL%/icons8-z-plumpy-72.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      type="image/png"
-      sizes="76x76"
-      href="%PUBLIC_URL%/icons8-z-plumpy-76.png"
-    />
-
-    <meta name="App" content="React App" />
+    <meta name="Contact" content="Generate HTML + PHP Contact" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -62,7 +37,7 @@
       href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap"
       rel="stylesheet"
     />
-    <title>App</title>
+    <title>Contact</title>
   </head>
   <body>
     <div id="root"></div>
