--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link
       type="image/png"
       sizes="16x16"
       rel="icon"
-      href="%PUBLIC_URL%/icons8-z-plumpy-16.png"
+      href="%PUBLIC_URL%/support-16.png"
     />
     <link
       type="image/png"
       sizes="32x32"
       rel="icon"
-      href="%PUBLIC_URL%/icons8-z-plumpy-32.png"
+      href="%PUBLIC_URL%/support-32.png"
     />
     <meta name="Contact" content="Generate HTML + PHP Contact" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
