--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<html lang="ja">
 
-    <link
-      type="image/png"
-      sizes="16x16"
-      rel="icon"
-      href="%PUBLIC_URL%/support-16.png"
-    />
-    <link
-      type="image/png"
-      sizes="32x32"
-      rel="icon"
-      href="%PUBLIC_URL%/support-32.png"
-    />
-    <meta name="Contact" content="Generate HTML + PHP Contact" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
-    <title>Contact</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <title>Contact</title>
+  <meta name="description" content="Customize and generate HTML + PHP code for contact form" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#ffffff" />
+
+  <meta property="og:title" content="Contact" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="Customize and generate HTML + PHP code for contact form" />
+  <meta property="og:url" content="https://czekras.github.io/contact/" />
+  <meta property="og:image" content="https://czekras.github.io/contact/favicon180x180.png" />
+
+  <link rel="canonical" href="https://czekras.github.io/contact/" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <link type="image/png" sizes="16x16" rel="icon" href="%PUBLIC_URL%/favicon16x16.png" />
+  <link type="image/png" sizes="32x32" rel="icon" href="%PUBLIC_URL%/favicon32x32.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon180x180.png" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
